feat: add components

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,16 @@
 </head>
 
 <body>
-  <p>Hello world!</p>
+  <div class="c-button-container is-default">
+    <a href="#" class="c-button is-default">2 Minutes</a>
+  </div>
+  <div class="c-button-container is-primary">
+    <a href="#" class="c-button is-primary"><img src="assets/images/rain.svg" alt="雨のアイコン"></a>
+  </div>
+
+  <div class="c-button-container is-primary">
+    <a href="#" class="c-button is-secondary"><img src="assets/images/beach.svg" alt="晴れのアイコン"></a>
+  </div>
 </body>
 
 </html>
