feat: add mark up

--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,37 @@
 </head>
 
 <body>
-  <div class="c-button-container is-default">
-    <a href="#" class="c-button is-default">2 Minutes</a>
-  </div>
-  <div class="c-button-container is-primary">
-    <a href="#" class="c-button is-primary"><img src="assets/images/rain.svg" alt="雨のアイコン"></a>
-  </div>
-
-  <div class="c-button-container is-primary">
-    <a href="#" class="c-button is-secondary"><img src="assets/images/beach.svg" alt="晴れのアイコン"></a>
-  </div>
+  <section class="p-top">
+    <video class="p-top__media" src="./assets/video/beach.mp4" type="video/mp4" autoplay muted loop>
+      恐れ入りますが、お使いのブラウザはvideoタグをサポートしていません。
+    </video>
+    <div class="p-top__container l-container l-spacer">
+      <div class="p-top__items">
+        <div class="p-top__item">
+          カウントダウンが入る
+        </div>
+        <div class="p-top__item">
+          <div class="c-button-container is-default">
+            <a href="#" class="c-button is-default">2 Minutes</a>
+          </div>
+          <div class="c-button-container is-default">
+            <a href="#" class="c-button is-default">2 Minutes</a>
+          </div>
+          <div class="c-button-container is-default">
+            <a href="#" class="c-button is-default">2 Minutes</a>
+          </div>
+        </div>
+        <div class="p-top__item">
+          <div class="c-button-container is-primary">
+            <a href="#" class="c-button is-primary"><img src="assets/images/rain.svg" alt="雨のアイコン"></a>
+          </div>
+          <div class="c-button-container is-primary">
+            <a href="#" class="c-button is-secondary"><img src="assets/images/beach.svg" alt="晴れのアイコン"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 </body>
 
 </html>
